sim,tests: Add a tag for SimObjects
This tag can be used to determine which files are needed
when sim/sim_object.hh is included in a header file. For
example, when declaring a unit test, this tag makes
the SConscript declaration much simpler.

Change-Id: I9a27c213e78b25089d4f161bde06f0d4c49814fb
Signed-off-by: Daniel R. Carvalho <odanrc@yahoo.com.br>

--- a/src/sim/SConscript
+++ b/src/sim/SConscript
@@ -47,7 +47,7 @@ Source('async.cc')
 Source('backtrace_%s.cc' % env['BACKTRACE_IMPL'], add_tags='gem5 trace')
 Source('core.cc')
 Source('cur_tick.cc', add_tags='gem5 trace')
-Source('tags.cc')
+Source('tags.cc', add_tags='gem5 simobject')
 Source('cxx_config.cc')
 Source('cxx_manager.cc')
 Source('cxx_config_ini.cc')
@@ -57,7 +57,7 @@ Source('py_interact.cc', add_tags='python')
 Source('eventq.cc', add_tags='gem5 events')
 Source('futex_map.cc')
 Source('global_event.cc', add_tags='gem5 drain')
-Source('globals.cc')
+Source('globals.cc', add_tags='gem5 simobject')
 Source('init.cc', add_tags='python')
 Source('init_signals.cc')
 Source('main.cc', tags='main')
@@ -69,7 +69,7 @@ Source('root.cc')
 Source('serialize.cc', add_tags='gem5 serialize')
 Source('se_workload.cc')
 Source('sim_events.cc', add_tags='gem5 drain')
-Source('sim_object.cc')
+Source('sim_object.cc', add_tags='gem5 simobject')
 Source('sub_system.cc')
 Source('ticked_object.cc')
 Source('simulate.cc')
@@ -92,6 +92,8 @@ Source('mem_pool.cc')
 env.TagImplies('gem5 drain', ['gem5 events', 'gem5 trace'])
 env.TagImplies('gem5 events', ['gem5 serialize', 'gem5 trace'])
 env.TagImplies('gem5 serialize', 'gem5 trace')
+env.TagImplies('gem5 simobject',
+    ['gem5 drain', 'gem5 events', 'gem5 serialize', 'gem5 trace'])
 
 GTest('byteswap.test', 'byteswap.test.cc', '../base/types.cc')
 GTest('globals.test', 'globals.test.cc', 'globals.cc',
