--- a/src/base/SConscript
+++ b/src/base/SConscript
@@ -63,7 +63,7 @@ GTest('intmath.test', 'intmath.test.cc')
 Source('logging.cc')
 GTest('logging.test', 'logging.test.cc', 'logging.cc', 'hostinfo.cc',
     'cprintf.cc', 'gtest/logging.cc', skip_lib=True)
-Source('match.cc', add_tags='gem5 trace')
+Source('match.cc', add_tags=['gem5 simobject', 'gem5 trace'])
 GTest('match.test', 'match.test.cc', 'match.cc', 'str.cc')
 Source('output.cc')
 Source('pixel.cc')
