base,tests: Add tests for BloomFilter::Perfect
Add tests to check that BloomFilter::Perfect
behaves as intended.

Change-Id: Icf71f4f924f752fb0f4128b94fb521b3127a4871
Signed-off-by: Daniel R. Carvalho <odanrc@yahoo.com.br>

--- a/src/base/filters/SConscript
+++ b/src/base/filters/SConscript
@@ -42,3 +42,5 @@ Source('multi_bloom_filter.cc')
 Source('perfect_bloom_filter.cc')
 
 GTest('base.test', 'base.test.cc', with_tag('gem5 simobject'))
+GTest('perfect_bloom_filter.test', 'perfect_bloom_filter.test.cc',
+    'perfect_bloom_filter.cc', with_tag('gem5 simobject'))
